--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,6 @@ main {
   margin-left: 25.3%;
   width: 75vw;
   height: 100vh;
-  transition: all 2s ease;
 }
 
 main section {
@@ -184,7 +183,7 @@ section .skills_wrapper div meter {
 }
 
 section .interests_wrapper {
-  margin-top: 10%;
+  margin-top: 5%;
   background-color: rgb(246, 247, 255);
   padding: 2%;
 }
@@ -202,4 +201,228 @@ section .interests_wrapper .row-hobbies-two {
 section .interests_wrapper .row-hobbies-three {
   display: flex;
   justify-content: space-around;
+}
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 10px;
+  width: 25vw;
+}
+
+footer ul {
+  display: flex;
+  list-style-type: none;
+  justify-content: center;
+}
+
+footer ul li {
+  padding: 0 4%;
+}
+
+footer ul li a i {
+  color: white;
+  font-size: 1.5rem;
+}
+
+@media (min-width: 1024px) and (max-width: 1024) {
+  header section h1 {
+    font-size: 1.8rem;
+  }
+  header section span {
+    font-size: 1.2rem;
+  }
+  nav {
+    margin-top: 20%;
+  }
+  nav ul li a {
+    font-size: 3rem;
+  }
+  main .description {
+    flex-direction: column;
+    justify-content: space-around;
+    height: 80%;
+  }
+  main .description .user_image_description {
+    display: none;
+  }
+  main .description .user_info h2 {
+    font-size: 6rem;
+    margin-bottom: 10%;
+  }
+  main .description .user_info p {
+    font-size: 2.4rem;
+  }
+  main .description .user_info_description {
+    margin-top: 20%;
+    flex-direction: column;
+  }
+  section .skills_wrapper {
+    flex-direction: column;
+    height: 80%;
+    border: 1px solid green;
+  }
+  section .skills_wrapper div {
+    width: 100%;
+    padding: 0 20px;
+  }
+  section .skills_wrapper div p {
+    font-size: 3.2rem;
+    padding: 3% 0;
+  }
+  footer ul li a i {
+    font-size: 2.2rem;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  header section h1 {
+    font-size: 1.4rem;
+  }
+  header section span {
+    font-size: 1rem;
+  }
+  nav {
+    margin-top: 20%;
+  }
+  nav ul li a {
+    font-size: 2rem;
+  }
+  main .description {
+    flex-direction: column;
+    justify-content: space-around;
+    height: 80%;
+  }
+  main .description .user_image_description {
+    display: none;
+  }
+  main .description .user_info h2 {
+    font-size: 4rem;
+    margin-bottom: 10%;
+  }
+  main .description .user_info p {
+    font-size: 2rem;
+  }
+  main .description .user_info_description {
+    margin-top: 20%;
+    flex-direction: column;
+  }
+  section .skills_wrapper {
+    flex-direction: column;
+    height: 80%;
+  }
+  section .skills_wrapper div {
+    width: 100%;
+    padding: 0 20px;
+  }
+  section .skills_wrapper div p {
+    font-size: 2.5rem;
+    padding: 3% 0;
+  }
+  footer ul li a i {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 375px) and (max-width: 812px) {
+  header {
+    display: none;
+  }
+  main {
+    margin-left: 10%;
+  }
+  main .description {
+    flex-direction: column;
+    justify-content: space-around;
+    height: 80%;
+  }
+  main .description .user_image_description {
+    display: none;
+  }
+  main .description .user_info h2 {
+    font-size: 2rem;
+    margin-bottom: 10%;
+  }
+  main .description .user_info p {
+    font-size: 1.3rem;
+  }
+  main .description .user_info_description {
+    margin-top: 20%;
+    flex-direction: column;
+  }
+  section .skills_wrapper {
+    flex-direction: column;
+    height: 80%;
+  }
+  section .skills_wrapper div {
+    width: 100%;
+    padding: 0;
+  }
+  section .skills_wrapper div p {
+    font-size: 1.4rem;
+    padding: 5% 0;
+  }
+  section .interests_wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  footer ul li a i {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 568px) {
+  header {
+    display: none;
+  }
+  main {
+    margin-left: 10%;
+  }
+  main .description {
+    flex-direction: column;
+    justify-content: space-around;
+    height: 80%;
+  }
+  main .description .user_image_description {
+    display: none;
+  }
+  main .description .user_info h2 {
+    display: none;
+  }
+  main .description .user_info p {
+    font-size: 1.3rem;
+  }
+  main section h1::after {
+    display: none;
+  }
+  main .description .user_info_description {
+    margin-top: 20%;
+    flex-direction: column;
+  }
+  section {
+    margin-bottom: 100px;
+    border: none;
+  }
+  section h1 {
+    margin-bottom: 70px;
+  }
+  section .skills_wrapper {
+    flex-direction: column;
+    height: 80%;
+  }
+  section .skills_wrapper div {
+    width: 100%;
+    padding: 0;
+  }
+  section .skills_wrapper div p {
+    font-size: 1.4rem;
+    padding: 5% 0;
+  }
+  section .interests_wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  footer ul li a i {
+    font-size: 1.5rem;
+  }
 }
